@@ -1,3 +1,4 @@
+2022-11-10: [BUGFIX] Better handling of decorations on mirrored widgets
 2022-11-10: [BUGFIX] Fix `Visualiser` segfault
 2022-11-08: [FEATURE] Add improvements to `StatusNotifier` menus
 2022-11-07: [FEATURE] Add ability to resize icons in `ALSAWidget` 
